tests/snapshots/examples_fixtures/aoc__2025__aoc_day7_part2.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/aoc/2025/aoc_day7_part2.flx
== compile ==
failed (compile)
== diagnostics ==
error[E004]: Undefined Variable

I can't find a value named `slice`.

  examples/aoc/2025/aoc_day7_part2.flx:30:16
   |
30 |     let left = slice(arr, 0, idx)
   |                ^^^^^

Hint:
  Define it first: let slice = ...;


error[E004]: Undefined Variable

I can't find a value named `slice`.

  examples/aoc/2025/aoc_day7_part2.flx:31:17
   |
31 |     let right = slice(arr, idx + 1, len(arr))
   |                 ^^^^^

Hint:
  Define it first: let slice = ...;


error[E056]: Wrong Number Of Arguments

The `concat` function takes 1 arguments, but 2 were provided.

  examples/aoc/2025/aoc_day7_part2.flx:32:5
   |
32 |     concat(concat(left, [|value|]), right)
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |     -------------------------------------- 2 arguments provided here, expected 1

Help:
  Remove 1 extra argument(s), for example: `concat(arg1)`.


error[E004]: Undefined Variable

I can't find a value named `push`.

  examples/aoc/2025/aoc_day7_part2.flx:44:50
   |
44 |     if i >= n { acc } else { zeros_acc(i + 1, n, push(acc, 0)) }
   |                                                  ^^^^

Hint:
  Define it first: let push = ...;


error[E004]: Undefined Variable

I can't find a value named `put`.

  examples/aoc/2025/aoc_day7_part2.flx:85:13
   |
85 |     let m = put({}, "next", next_counts)
   |             ^^^

Hint:
  Define it first: let put = ...;


error[E004]: Undefined Variable

I can't find a value named `put`.

  examples/aoc/2025/aoc_day7_part2.flx:86:5
   |
86 |     put(m, "done", finished)
   |     ^^^

Hint:
  Define it first: let put = ...;


error[E004]: Undefined Variable

I can't find a value named `get`.

  examples/aoc/2025/aoc_day7_part2.flx:90:11
   |
90 |     match get(x, "next") {
   |           ^^^

Hint:
  Define it first: let get = ...;


error[E004]: Undefined Variable

I can't find a value named `get`.

  examples/aoc/2025/aoc_day7_part2.flx:97:11
   |
97 |     match get(x, "done") {
   |           ^^^

Hint:
  Define it first: let get = ...;

Found 8 errors.
== stdout ==
<not executed>
